Bug 485101 - Systemsettings crashed after viewing Firewall settings then switching to other category
Summary: Systemsettings crashed after viewing Firewall settings then switching to othe...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_firewall (other bugs)
Version First Reported In: 6.0.3
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 486029 487512 488039 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-05 17:39 UTC by Karol Szuster
Modified: 2024-06-08 04:49 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (154.75 KB, text/plain)
2024-04-05 17:39 UTC, Karol Szuster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karol Szuster 2024-04-05 17:39:55 UTC
Application: systemsettings (6.0.3)

Qt Version: 6.7.0
Frameworks Version: 6.0.0
Operating System: Linux 6.8.3-arch1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 6.0.3 [CoredumpBackend]

-- Information about the crash:
Systemsettings crashes every time I access firewall settings then switching to some other category f.e. Wi-Fi & Networking

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get (this=0x8, this=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.7.0/src/corelib/tools/qscopedpointer.h:110
[...]
#8  QObject::deleteLater (this=0x0) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.7.0/src/corelib/kernel/qobject.cpp:2456
#9  0x00007d481a0a18ec in FirewallClient::~FirewallClient (this=0x560716c2b630, this=<optimized out>) at /usr/src/debug/plasma-firewall/plasma-firewall-6.0.3/kcm/core/firewallclient.cpp:36
#10 0x00007d481a0a191e in FirewallClient::~FirewallClient (this=0x560716c2b630, this=<optimized out>) at /usr/src/debug/plasma-firewall/plasma-firewall-6.0.3/kcm/core/firewallclient.cpp:38
#11 0x00007d4846d866cb in QObjectPrivate::deleteChildren (this=this@entry=0x560715d9b400) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.7.0/src/corelib/kernel/qobject.cpp:2216


Reported using DrKonqi
Comment 1 Karol Szuster 2024-04-05 17:39:56 UTC
Created attachment 168195 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 bugsie 2024-04-06 16:44:08 UTC
This is most probably not a bug, systemsettings has just not been rebuilt yet for qt 6.7 (which is in extra-testing)
Comment 3 duha.bugs 2024-04-19 16:05:25 UTC
Can reproduce on Git Master compiled against qt 6.7.

The issue only appears if you don't have a firewall installed.

When opening the firewall kcm, one CPU core seems to go into a loop with 100% usage (/usr/bin/systemsettings kcm_networkmanagment in htop shows 100%).

Switching the tab or exiting systemsettings crashes with the above backtrace.
Comment 4 Nicolas Fella 2024-05-24 22:51:16 UTC
*** Bug 486029 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2024-05-24 22:52:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-firewall/-/merge_requests/85
Comment 6 Nicolas Fella 2024-05-27 10:14:29 UTC
*** Bug 487512 has been marked as a duplicate of this bug. ***
Comment 7 Nicolas Fella 2024-05-27 10:15:37 UTC
Git commit 14b6db2c126f7bcd7216bc1537e9cbf9911aec48 by Nicolas Fella.
Committed on 27/05/2024 at 10:14.
Pushed by nicolasfella into branch 'master'.

Check backend for null before deleting

M  +4    -2    kcm/core/firewallclient.cpp

https://invent.kde.org/plasma/plasma-firewall/-/commit/14b6db2c126f7bcd7216bc1537e9cbf9911aec48
Comment 8 Nicolas Fella 2024-05-27 10:16:16 UTC
Git commit 369de87bb4fd0dabd50884352a2e3608d13d1a6e by Nicolas Fella.
Committed on 27/05/2024 at 10:16.
Pushed by nicolasfella into branch 'Plasma/6.1'.

Check backend for null before deleting
(cherry picked from commit 14b6db2c126f7bcd7216bc1537e9cbf9911aec48)

M  +4    -2    kcm/core/firewallclient.cpp

https://invent.kde.org/plasma/plasma-firewall/-/commit/369de87bb4fd0dabd50884352a2e3608d13d1a6e
Comment 9 Harald Sitter 2024-06-05 05:46:03 UTC
*** Bug 488039 has been marked as a duplicate of this bug. ***