Check backend for null before deleting

BUG: 485101
(cherry picked from commit 14b6db2c126f7bcd7216bc1537e9cbf9911aec48)